added timesheet button and change website title page names

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,7 +15,7 @@
 # from Travers Consulting Incorporated.
 #
 
-website.title=TC Web Shell
+website.title=Travers Consulting Time Tracking Website
 website.title.full=Travers Consulting Web Shell
 
 home.page.title=TC Web Shell - Home
