--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,3 +25,4 @@ error.page.header=Error
 users.page.title=User
 changepassword.page.title=Change Password
 timesheet.page.title=Timesheet
+projects.page.title=Projects
