Added Invoice column to Timesheet Entity changed "projects" to "project" on lines 103, 104, 107 MainReqController added functionality to project.html Timesheet_steveview: Added Invoice column to table display; added fuctionality to insert data to invoice when adding new entry Sections.html: changed "projects" to "project" on lines 50, 78, 79 timesheet.html: syntax changes added Prjoect.DAO added Project entity added Project Repository added Project Controller

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,4 +25,4 @@ error.page.header=Error
 users.page.title=User
 changepassword.page.title=Change Password
 timesheet.page.title=Timesheet
-projects.page.title=Projects
+projects.page.title=Project
